--- a/package.json
+++ b/package.json
@@ -20,9 +20,10 @@
     "clsx": "^2.1.1",
     "framer-motion": "^11.7.0",
     "lucide-react": "^0.441.0",
-    "next": "14.2.13",
+    "next": "^14.2.14",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.3.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7"
   },
